2014-02-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Amflush.pm: Fix message.
	* perl/Amanda/Rest/Runs.pm: Add amdump and amflush
	* perl/Amanda/Rest/Storages.pm: Fix documentation.
	* perl/Amanda/Rest/Storages/Labels.pm: Fix documentation.
	* perl/Amanda/Rest/Amanda/bin/app.pl.in: Add many methods.

2014-02-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm (divzero, divzero_wide, divzero_col,
	  hrmn, mnsc):  Function must be dalled from the package.
	* perl/Amanda/Report/json.pm (divzero, divzero_wide, divzero_col,
	  hrmn, mnsc):  Add functions in package.
	* perl/Amanda/Rest/Amanda/config.yml: Add allow_nonref
	* perl/Amanda/Rest/Report.pm: Fix documentation.

2014-02-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Status.pm: Fix documentation.

2014-02-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Dumps.pm: Fix documentation.

2014-02-04  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c, ndmp-src/ndmpconnobj.c,
	  ndmp-src/ndmpconnobj.h: Undo previous patch.
	* device-src/ndmp-device.c: ndmp_connection_wait_for_notify_with_cond
	  returning 1 is a valid result.

2014-02-04  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: Call ndmp_connection_mover_get_state
	  before calling ndmp_connection_wait_for_notify_with_cond to verify
	  the mover state.
	* ndmp-src/ndmpconnobj.c (ndmp_connection_mover_get_state): Return
	  pause_reason and halt_reason
	* ndmp-src/ndmpconnobj.h (ndmp_connection_mover_get_state): Change
	  prototype.

2014-02-03  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amlabel.pl: Fix.

2014-02-03  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (get_storage_list): New function.
	* common-src/conffile.h (get_storage_list): Add prototype.
	* perl/Amanda/Config.swg (get_storage_list): Swig function.
	* perl/Amanda/Changer/aggregate.pm,
	  perl/Amanda/Changer/multi.pm